fixed masonry on mobile

--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -229,7 +229,7 @@ nav {
 		border: .1rem dashed #fff;
 		box-sizing: border-box;
 		position: absolute;
-		left: 0;
+		left: .01rem;
 		top: .23rem;
 		border-radius: 100%;
 	}
@@ -506,6 +506,7 @@ footer {
 
 	#posts {
 		display: block;
+		column-count: 1;
 	}
 
 	.resources {
